--- a/index.html
+++ b/index.html
@@ -643,7 +643,144 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-footer-wrapper">
+          <p class="subscribe-footer">Subscribe</p>
+          <form class="subscribe-form-footer">
+            <label class="subscribe-label-footer">
+              <input
+                class="subscribe-input-footer"
+                name="mail-subscribe"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscribe-button-futtor button" type="submit">
+              Subscribe
+              <svg class="send-email-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close-button">
+          <svg
+            class="modal-close-button-icon"
+            width="8"
+            height="8"
+            aria-label="close modal icon"
+          >
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="review-form-desription">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="review-form">
+          <div class="review-form-wrapper">
+            <label class="review-form-label" for="user-name">Name</label>
+            <div class="review-form-input-wrapper">
+              <input
+                class="review-form-input"
+                id="user-name"
+                name="user-name"
+                type="text"
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+"
+                title="Oleksii"
+                required
+              />
+              <svg
+                class="review-form-input-icon"
+                width="18"
+                height="24"
+                aria-label="icon user"
+              >
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="review-form-wrapper">
+            <label class="review-form-label" for="user-tel">Phone</label>
+            <div class="review-form-input-wrapper">
+              <input
+                class="review-form-input"
+                id="user-tel"
+                name="user-tel"
+                type="tel"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+                required
+              />
+              <svg
+                class="review-form-input-icon"
+                width="18"
+                height="24"
+                aria-label="phone number"
+              >
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="review-form-wrapper">
+            <label class="review-form-label" for="user-email">Email</label>
+            <div class="review-form-input-wrapper">
+              <input
+                class="review-form-input"
+                id="user-email"
+                name="user-email"
+                type="email"
+                required
+              />
+              <svg
+                class="review-form-input-icon"
+                width="18"
+                height="24"
+                aria-label="email"
+              >
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="review-form-wrapper">
+            <label class="review-form-label" for="user-comment">Comment</label>
+            <textarea
+              class="review-form-textarea"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+              required
+            ></textarea>
+          </div>
+          <div class="review-form-checkbox-wrapper">
+            <input
+              class="review-form-checkbox visually-hidden"
+              id="user-privacy-policy"
+              name="user-privacy-policy"
+              type="checkbox"
+              value="true"
+              required
+            />
+            <label class="review-form-checkbox-label" for="user-privacy-policy">
+              <span class="review-form-own-checkbox">
+                <svg
+                  class="review-form-checkbox-icon"
+                  width="10"
+                  height="8"
+                  aria-label="checkmark icon"
+                >
+                  <use href="./images/icons.svg#icon-checkmark"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="accent-color" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="review-form-submit-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
