--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-button">
           <svg
