--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
     </footer>
     <div class="backdrop is-open">
       <div class="modal">
-        <button class="modal-close-button">
+        <button class="modal-close-button" type="button">
           <svg
             class="modal-close-button-icon"
             width="8"
@@ -681,12 +681,12 @@
         </p>
         <form class="review-form">
           <div class="review-form-wrapper">
-            <label class="review-form-label" for="user-name">Name</label>
+            <label class="review-form-label" for="user-privacy">Name</label>
             <div class="review-form-input-wrapper">
               <input
                 class="review-form-input"
-                id="user-name"
-                name="user-name"
+                id="user-privacy"
+                name="user-privacy"
                 type="text"
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+"
                 title="Oleksii"
