--- a/index.html
+++ b/index.html
@@ -681,12 +681,12 @@
         </p>
         <form class="review-form">
           <div class="review-form-wrapper">
-            <label class="review-form-label" for="user-privacy">Name</label>
+            <label class="review-form-label" for="user-name">Name</label>
             <div class="review-form-input-wrapper">
               <input
                 class="review-form-input"
-                id="user-privacy"
-                name="user-privacy"
+                id="user-name"
+                name="user-name"
                 type="text"
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+"
                 title="Oleksii"
@@ -744,7 +744,7 @@
               </svg>
             </div>
           </div>
-          <div class="review-form-wrapper">
+          <div class="review-form-comment-wrapper">
             <label class="review-form-label" for="user-comment">Comment</label>
             <textarea
               class="review-form-textarea"
@@ -757,13 +757,13 @@
           <div class="review-form-checkbox-wrapper">
             <input
               class="review-form-checkbox visually-hidden"
-              id="user-privacy-policy"
-              name="user-privacy-policy"
+              id="user-privacy"
+              name="user-privacy"
               type="checkbox"
               value="true"
               required
             />
-            <label class="review-form-checkbox-label" for="user-privacy-policy">
+            <label class="review-form-checkbox-label" for="user-privacy">
               <span class="review-form-own-checkbox">
                 <svg
                   class="review-form-checkbox-icon"
