--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                 placeholder="E-mail"
               />
             </label>
-            <button class="subscribe-button-futtor button" type="submit">
+            <button class="subscribe-button-futtor" type="submit">
               Subscribe
               <svg class="send-email-svg" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
